# vibe_coding_backend_template

./: LICENSE  README.md
template/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  rule.md
template/alembic/: env.py  script.py.mako
template/alembic/versions/: cbd3dddb6664_1st.py
template/app/: __init__.py  exceptions.py  main.py
template/app/api/: deps.py
template/app/api/v1/: __init__.py  router.py
template/app/api/v1/endpoints/: auth.py  users.py
template/app/core/: __init__.py  cache.py  config.py  database.py  dependencies.py  logging.py  security.py
template/app/crud/: __init__.py  base.py  user_repo.py
template/app/middleware/: error_handler.py  logging.py
template/app/models/: __init__.py  base.py  user.py
template/app/schemas/: __init__.py  base.py  token.py  user.py
template/app/services/: __init__.py  auth_service.py  user_service.py
template/app/utils/: datetime.py  helpers.py  validators.py
template/scripts/: create_admin.py  seed_data.py
template/tests/: conftest.py
template/tests/test_api/: __init__.py  test_auth.py  test_users.py
template/tests/test_repositories/: __init__.py  test_user_repo.py
template/tests/test_services/: __init__.py  test_user_service.py
